2011-07-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSGhostscriptImageRep.m: Only invoke 'which' once.

2011-07-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSGhostscriptImageRep.m: Change to NSLog, only log
	a warning the first time invoking ghostscript throws an exception,
	and log a message if it returns a nonzero exit status.

2011-07-11  Eric Wasylishen  <ericw@new-host-2.home>

	* Source/GSGhostscriptImageRep.m: Add NSWarnLog to execption
	handlers to print a message when finding or invoking Ghostscript
	fails.

2011-07-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m (-nativeDrawInRect:...): Compute the rep size
	after the nil test.

2011-07-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m (-dealloc),
	* Source/NSWindow.m (-dealloc),
	* Source/NSLayoutManager.m (-dealloc): Unbind key bindings.

2011-07-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSColorPanel.m (-_magnify:): Preliminary implementation

2011-07-10  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSMenuView.m (-_trackWithEvent:): Fix for the bug where
	the highlighted menu item can be offset from the mouse pointer
	location when menu windows are moved by the window manager. See
	detailed comment in the code for more info.

2011-07-10  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSGhostscriptImageRep.m: Remove hardcoded path to gs
	executable. First try GSGhostscriptExecutablePath default, then
	try running "$SHELL -c which gs" to get the path.

2011-07-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSView.m (-resizeWithOldSuperviewSize:): Factor out
	autoresizing logic into a function. Add an extra code path to handle
	when the flexible space is 0, which behaves like the old version
	of the code (it divides the available space evenly).

2011-07-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tests/gui/NSView/NSView_autoresize_and_rounding.m: Tweak the test
	so it doesn't try to set the window size to {0,0}
