@@ -44,7 +44,8 @@
 #import "AppKit/NSWindow.h"
 #import <GNUstepGUI/GSTheme.h>
 
-DEFINE_RINT_IF_MISSING
+#import "GSGuiPrivate.h"
+
 #ifndef HAVE_ATAN2F
 #define atan2f atan2
 #endif
@@ -689,7 +690,7 @@ float _floatValueForMousePoint (NSPoint point, NSRect knobRect,
 
   d = _maxValue - _minValue;
   f = ((aValue - _minValue)  * (effectiveTicks - 1)) / d;
-  f = ((rint(f) * d) / (effectiveTicks - 1)) + _minValue;
+  f = ((GSRoundTowardsInfinity(f) * d) / (effectiveTicks - 1)) + _minValue;
 
   /* never return the maximum value, tested on Apple */
   if (_type == NSCircularSlider && (f >= _maxValue))
